devops-test.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description":
    "Devops Test: This CFT will create seven layered infrastructure with and test your ability to understand AWS",
  "Parameters": {
    "KeyPairName": {
      "Description": "Name of Public/private key pair",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::KeyPair::KeyPairName>",
      "Default": "/account/key-pair"
    },
    "AmiId": {
      "Description": "Amazon AMI",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
    },
    "InstanceType": {
      "Description": "Amazon EC2 instance type for the 1st HWNode",
      "Type": "String",
      "Default": "t2.medium"
    },
    "DataBucketName": {
      "Description": "Data bucket name",
      "Type": "String",
      "Default": ""
    },
    "BucketName": {
      "Description": "Artifact bucket name",
      "Type": "String",
      "Default": ""
    },
    "AZ1": {
      "Description": "One of the AZs that subnets will be created in.",
      "Type": "String",
      "Default": "us-east-1c"
    },
    "AZ2": {
      "Description": "One of the AZs that subnets will be created in.",
      "Type": "String",
      "Default": "us-east-1b"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPC-Devops-Test"
          }
        ]
      }
    },
    "HWIGW": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-IGW-Devops-Test"
          }
        ]
      }
    },
    "HWAttach": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": { "Ref": "HWIGW" }
      }
    },
    "DMZAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "DMZPUBLICAZ1"
          }
        ]
      }
    },
    "WebAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "WEBPRIVATEAZ1"
          }
        ]
      }
    },
    "AppAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.8.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "APPPRIVATEAZ1"
          }
        ]
      }
    },
    "DBAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.12.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "DBPRIVATEAZ1"
          }
        ]
      }
    },
    "AdminAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.16.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ADMINPRIVATEAZ1"
          }
        ]
      }
    },
    "DMZAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.20.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "DMZPUBLICAZ2"
          }
        ]
      }
    },
    "WebAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.24.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "WEBPRIVATEAZ2"
          }
        ]
      }
    },
    "AppAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.28.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "APPPRIVATEAZ2"
          }
        ]
      }
    },
    "DBAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "DBPRIVATEAZ2"
          }
        ]
      }
    },
    "AdminAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.36.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ADMINPRIVATEAZ2"
          }
        ]
      }
    },
    "ExternalELBAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.40.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ExternalELBPublicAZ1"
          }
        ]
      }
    },
    "InternalELBAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.44.0/22",
        "AvailabilityZone": {
          "Ref": "AZ1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "InternalELBPrivateAZ1"
          }
        ]
      }
    },
    "ExternalELBAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.48.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ExternalELBPublicAZ2"
          }
        ]
      }
    },
    "InternalELBAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.52.0/22",
        "AvailabilityZone": {
          "Ref": "AZ2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "InternalELBPrivateAZ2"
          }
        ]
      }
    },

    "RouteTable1AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT1-AZ1"
          }
        ]
      }
    },
    "RouteTable1AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT1-AZ2"
          }
        ]
      }
    },
    "RouteTable6AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT6-AZ1"
          }
        ]
      }
    },
    "RouteTable6AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT6-AZ2"
          }
        ]
      }
    },
    "RouteTable2AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT2-AZ1"
          }
        ]
      }
    },
    "RouteTable2AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT2-AZ2"
          }
        ]
      }
    },
    "RouteTable3AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT3-AZ1"
          }
        ]
      }
    },
    "RouteTable3AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT3-AZ2"
          }
        ]
      }
    },
    "RouteTable4AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT4-AZ1"
          }
        ]
      }
    },
    "RouteTable4AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT4-AZ2"
          }
        ]
      }
    },
    "RouteTable5AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT5-AZ1"
          }
        ]
      }
    },
    "RouteTable5AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT5-AZ2"
          }
        ]
      }
    },
    "RouteTable7AZ1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT7-AZ1"
          }
        ]
      }
    },
    "RouteTable7AZ2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "HW-RT7-AZ2"
          }
        ]
      }
    },
    "route1AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "HWAttach",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable1AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "HWIGW"
        }
      }
    },
    "route1AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "HWAttach",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable1AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "HWIGW"
        }
      }
    },
    "route6AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "HWAttach",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable6AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "HWIGW"
        }
      }
    },
    "route6AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "HWAttach",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable6AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "HWIGW"
        }
      }
    },
    "route2AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ1",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable2AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ1" }
      }
    },
    "route2AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ2",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable2AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ2" }
      }
    },
    "route3AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ1",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable3AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ1" }
      }
    },
    "route3AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ2",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable3AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ2" }
      }
    },
    "route4AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ1",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable4AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ1" }
      }
    },
    "route4AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ2",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable4AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ2" }
      }
    },
    "route5AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ1",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable5AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ1" }
      }
    },
    "route5AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ2",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable5AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ2" }
      }
    },
    "route7AZ1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ1",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable7AZ1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ1" }
      }
    },
    "route7AZ2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NATAZ2",
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable7AZ2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "NATAZ2" }
      }
    },
    "DMZAssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "DMZAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable1AZ1"
        }
      }
    },
    "DMZAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "DMZAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable1AZ2"
        }
      }
    },
    "ExternalELBssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "ExternalELBAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable6AZ1"
        }
      }
    },
    "ExternalELBAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "ExternalELBAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable6AZ2"
        }
      }
    },
    "DBAssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "DBAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable2AZ1"
        }
      }
    },
    "DBAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "DBAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable2AZ2"
        }
      }
    },
    "WebAssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "WebAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable3AZ1"
        }
      }
    },
    "WebAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "WebAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable3AZ2"
        }
      }
    },
    "APPAssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "AppAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable4AZ1"
        }
      }
    },
    "APPAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "AppAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable4AZ2"
        }
      }
    },
    "ADMINAssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "AdminAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable5AZ1"
        }
      }
    },
    "ADMINAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "AdminAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable5AZ2"
        }
      }
    },
    "InternalELBAssociationAZ1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "InternalELBAZ1"
        },
        "RouteTableId": {
          "Ref": "RouteTable7AZ1"
        }
      }
    },
    "InternalELBAssociationAZ2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "InternalELBAZ2"
        },
        "RouteTableId": {
          "Ref": "RouteTable7AZ2"
        }
      }
    },
    "NATSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY DMZ SECURITY GROUP"
      }
    },
    "AppSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY App SECURITY GROUP"
      }
    },
    "WebSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY WEB SECURITY GROUP"
      }
    },
    "DBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY DB SECURITY GROUP"
      }
    },
    "InternalELBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY Internal ELB SECURITY GROUP"
      }
    },
    "AdminSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY ADMIN SECURITY GROUP"
      }
    },
    "ExternalELBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "GroupDescription": "MY External ELB SECURITY GROUP"
      }
    },
    "NATSGOutbound": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "1",
        "ToPort": "65535",
        "GroupId": {
          "Fn::GetAtt": ["NATSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AppOutbound": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "1",
        "ToPort": "65535",
        "GroupId": {
          "Fn::GetAtt": ["AppSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ExternalELBOutbound": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "1",
        "ToPort": "65535",
        "GroupId": {
          "Fn::GetAtt": ["ExternalELBSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "WebOutbound": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "1",
        "ToPort": "65535",
        "GroupId": {
          "Fn::GetAtt": ["WebSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "App2Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "GroupId": {
          "Fn::GetAtt": ["AppSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "App3Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "GroupId": {
          "Fn::GetAtt": ["AppSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Web2Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "GroupId": {
          "Fn::GetAtt": ["WebSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Web3Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "GroupId": {
          "Fn::GetAtt": ["WebSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Web4Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "8080",
        "ToPort": "8080",
        "GroupId": {
          "Fn::GetAtt": ["WebSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "eELB1Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "GroupId": {
          "Fn::GetAtt": ["ExternalELBSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "eELB3Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "GroupId": {
          "Fn::GetAtt": ["ExternalELBSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "NATSG2Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "GroupId": {
          "Fn::GetAtt": ["NATSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "NATSG3Inbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "GroupId": {
          "Fn::GetAtt": ["NATSG", "GroupId"]
        },
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ElasticIPNATAZ1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATAZ1" : {
      "DependsOn" : ["ElasticIPNATAZ1","HWAttach"],
      "Type" : "AWS::EC2::NatGateway",
      "Properties" : {
        "AllocationId" : { "Fn::GetAtt" : ["ElasticIPNATAZ1", "AllocationId"]},
        "SubnetId" : { "Ref" : "DMZAZ1"},
        "Tags" : [ {"Key" : "Name", "Value" : "NATGW-az1-devops-test" } ]
      }
    },
    "ElasticIPNATAZ2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATAZ2" : {
      "DependsOn" : ["ElasticIPNATAZ2","HWAttach"],
      "Type" : "AWS::EC2::NatGateway",
      "Properties" : {
        "AllocationId" : { "Fn::GetAtt" : ["ElasticIPNATAZ2", "AllocationId"]},
        "SubnetId" : { "Ref" : "DMZAZ2"},
        "Tags" : [ {"Key" : "Name", "Value" : "NATGW-az2-devops-test" } ]
      }
    },
    "RestAPI": {
      "Type": "AWS::ApiGateway::RestApi",
      "Properties": {
        "Name": "devops-test"
      }
    },
    "RestApiMethod": {
      "Type": "AWS::ApiGateway::Method",
      "DependsOn": ["RestAPI"],
      "Properties": {
        "RestApiId": { "Ref": "RestAPI" },
        "ResourceId": { "Fn::GetAtt": ["RestAPI", "RootResourceId"] },
        "HttpMethod": "POST",
        "AuthorizationType": "NONE",
        "Integration": {
          "Type": "HTTP",
          "IntegrationHttpMethod": "POST",
          "Uri": "http://${stageVariables.rootURL}",
          "IntegrationResponses": [
            {
              "StatusCode": 200
            }
          ],
          "PassthroughBehavior": "WHEN_NO_TEMPLATES"
        },
        "MethodResponses": [
          {
            "StatusCode": 200
          }
        ]
      }
    },
    "ApiDeploymentMock": {
      "Type": "AWS::ApiGateway::Deployment",
      "Properties": {
        "RestApiId": { "Ref": "RestAPI" },
        "StageName": "mock"
      },
      "DependsOn": ["RestAPI", "RestApiMethod"]
    },
    "ApiDeploymentAcceptance": {
      "Type": "AWS::ApiGateway::Deployment",
      "Properties": {
        "RestApiId": { "Ref": "RestAPI" },
        "StageName": "acceptance"
      },
      "DependsOn": ["RestAPI", "RestApiMethod"]
    },
    "ApiDeploymentProd": {
      "Type": "AWS::ApiGateway::Deployment",
      "Properties": {
        "RestApiId": { "Ref": "RestAPI" },
        "StageName": "prod"
      },
      "DependsOn": ["RestAPI", "RestApiMethod"]
    },
    "ApiDeploymentIntegration": {
      "Type": "AWS::ApiGateway::Deployment",
      "Properties": {
        "RestApiId": { "Ref": "RestAPI" },
        "StageName": "integration"
      },
      "DependsOn": ["RestAPI", "RestApiMethod"]
    },
    "ApiDeploymentExploratory": {
      "Type": "AWS::ApiGateway::Deployment",
      "Properties": {
        "RestApiId": { "Ref": "RestAPI" },
        "StageName": "exploratory"
      },
      "DependsOn": ["RestAPI", "RestApiMethod"]
    },
    "VPCID": {
      "Value": {
        "Ref": "VPC"
      },
      "Description": "VPC ID of newly created VPC"
    },
    "DMZAZ1subnet": {
      "Value": {
        "Ref": "DMZAZ1"
      },
      "Description": "This is Public subnet"
    },
    "DMZAZ2subnet": {
      "Value": {
        "Ref": "DMZAZ2"
      },
      "Description": "This is Public subnet"
    },
    "DBAZ1subnet": {
      "Value": {
        "Ref": "DBAZ1"
      },
      "Description": "This is Public subnet"
    },
    "DBAZ2subnet": {
      "Value": {
        "Ref": "DBAZ2"
      },
      "Description": "This is Public subnet"
    },
    "ADMINAZ1subnet": {
      "Value": {
        "Ref": "AdminAZ1"
      },
      "Description": "This is Private subnet"
    },
    "ADMINAZ2subnet": {
      "Value": {
        "Ref": "AdminAZ2"
      },
      "Description": "This is Private subnet"
    },
    "WEBAZ1subnet": {
      "Value": {
        "Ref": "WebAZ1"
      },
      "Description": "This is WEB private subnet"
    },
    "WEBAZ2subnet": {
      "Value": {
        "Ref": "WebAZ2"
      },
      "Description": "This is WEB private subnet"
    },
    "APPAZ1subnet": {
      "Value": {
        "Ref": "AppAZ1"
      },
      "Description": "This is private subnet"
    },
    "APPAZ2subnet": {
      "Value": {
        "Ref": "AppAZ2"
      },
      "Description": "This is private subnet"
    },
    "ExternalELBAZ1subnet": {
      "Value": {
        "Ref": "ExternalELBAZ1"
      },
      "Description": "This is Public subnet"
    },
    "ExternalELBAZ2subnet": {
      "Value": {
        "Ref": "ExternalELBAZ2"
      },
      "Description": "This is Public subnet"
    },
    "InternalELBAZ1subnet": {
      "Value": {
        "Ref": "InternalELBAZ1"
      },
      "Description": "This is private subnet"
    },
    "InternalELBAZ2subnet": {
      "Value": {
        "Ref": "InternalELBAZ2"
      },
      "Description": "This is private subnet"
    },
    "DMZsecuritygroup": {
      "Value": {
        "Ref": "NATSG"
      },
      "Description": "This is DMZ SecurityGroup"
    },
    "DBsecuritygroup": {
      "Value": {
        "Ref": "DBSG"
      },
      "Description": "This is DB SecurityGroup"
    },
    "ADMINsecuritygroup": {
      "Value": {
        "Ref": "AdminSG"
      },
      "Description": "This is ADMIN SecurityGroup"
    },
    "WEBsecuritygroup": {
      "Value": {
        "Ref": "WebSG"
      },
      "Description": "This is WEB SecurityGroup"
    },
    "AppSecuritygroup": {
      "Value": {
        "Ref": "AppSG"
      },
      "Description": "This is APP SecurityGroup"
    },
    "ExternalELBsecuritygroup": {
      "Value": {
        "Ref": "ExternalELBSG"
      },
      "Description": "This is ExeternalELB SecurityGroup"
    },
    "InternalELBsecuritygroup": {
      "Value": {
        "Ref": "InternalELBSG"
      },
      "Description": "This is InternalELBAZ SecurityGroup"
    },
    "IamInstanceProfile": {
      "Value": {
        "Ref": "IamInstanceProfile"
      },
      "Description": "This is IamInstanceProfile"
    }
  }
}
